--- a/src/app/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/detail-pokemon/detail-pokemon.component.html
@@ -35,7 +35,7 @@
           </table>
         </div>
         <div class="card-action">
-          <a>Retour</a> <!--(click)="goBack()" a rajouter dans la balise a une fois crée-->
+          <a (click)="goToPokemonList()">Retour</a>
         </div>
       </div>
     </div>
