--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1 class="center">Liste de Pokémons</h1>
+<nav> <!-- barre de navigation -->
+    <div class="nav-wrapper teal"> <!-- style de la barre de navigation grâce aux class CSS  par Materialize-->
+        <a href="#" class="brand-logo center"> <!-- redirection vers la page d'accueil avec # quand l'utilisateur clique sur le logo qui est centré dans la div de la barre de navigation  -->
+            Pokédex <!-- btitre de notre application -->
+        </a>
+    </div>
+</nav>
 
 <router-outlet></router-outlet> <!-- c'est ici, à la place de router-outlet, qu'est injecté le template des composants selon ce qui est tapé dans l'URL par l'utilisateur -->
+
