--- a/src/app/list-pokemon/list-pokemon.component.html
+++ b/src/app/list-pokemon/list-pokemon.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
             <div *ngFor="let pokemon of pokemonList" class="col m4 s6"> 
-                    <div class="card horizontal" pkmnBorderCard="#Ff0000"><!-- <div class="card horizontal" (click)="selectPokemon(pokemon.id)" pkmnBorderCard="#Ff0000"></div> -->
+                    <div (click)="goToPokemon(pokemon)" class="card horizontal" pkmnBorderCard="#Ff0000"><!-- <div class="card horizontal" (click)="selectPokemon(pokemon.id)" pkmnBorderCard="#Ff0000"></div> -->
                             <div class="card-image">
                                     <img [src]="pokemon.picture" title="img"/><!--manque title=""-->
                             </div>
