--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -36,6 +36,7 @@
         </div>
         <div class="card-action">
           <a (click)="goToPokemonList()">Retour</a>
+          <a (click)="goToEditPokemon(pokemon)">Editer</a> <!-- on rajoute le bouton éditer pour pouvoir accéder au formulaire dédition d'un pokémon-->
         </div>
       </div>
     </div>
