--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -21,3 +21,11 @@
             </div> 
      </div> 
 </div>
+<!-- bouton pour ajouter un pokémon sur la page de la liste des pokémon-->
+<a
+        class="btn-floating btn-large waves-effect waves-light red z-depth-3"
+        style="position: fixed; bottom: 25px; right: 25px;"
+        routerLink="/pokemon/add"
+>
+➕  
+</a> <!-- pour les emoji, mettre deux points et le nom de l'emoji :happy, :plus-->
