--- a/src/app/pokemon/list-pokemon/list-pokemon.component.V6.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.V6.html
@@ -1,6 +1,5 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
-        <app-search-pokemon></app-search-pokemon>
             <div *ngFor="let pokemon of pokemonList" class="col m4 s6"> 
                     <div (click)="goToPokemon(pokemon)" class="card horizontal" pkmnBorderCard="#Ff0000">
                             <div class="card-image">
@@ -21,12 +20,12 @@
                     </div>
             </div> 
      </div> 
-</div>
+</div> -->
 <!-- bouton pour ajouter un pokémon sur la page de la liste des pokémon-->
-<a
+<!-- <a
         class="btn-floating btn-large waves-effect waves-light red z-depth-3"
         style="position: fixed; bottom: 25px; right: 25px;"
         routerLink="/pokemon/add"
 >
-➕  
-</a> <!-- pour les emoji, mettre deux points et le nom de l'emoji :happy, :plus-->
+➕   -->
+<!-- </a> pour les emoji, mettre deux points et le nom de l'emoji :happy, :plus -->
