--- a/src/app/pokemon/search-pokemon/search-pokemon.component.html
+++ b/src/app/pokemon/search-pokemon/search-pokemon.component.html
@@ -3,9 +3,10 @@
         <div class="card">
             <div class="card-content">
                 <div class="input-field"> <!-- pour préparer notre champ de recherche-->
+                    <!-- (keyup)="search(searchBox)" -->
                     <input 
-                        #searchBox 
-                        (keyup)="search(searchBox.value)"
+                    #searchBox 
+                    ma méthode (keyup)="search(searchBox.value)"
                         placeholder="Rechercher un pokémon"
                     />
                     <!-- #searchBox: déclaration de mon champ de recherche, c'est ici que l'utilisateur va venir taper ses recherches
